Add config for trusted proxy urls to reset uri param

--- a/dspace/config/dspace.cfg
+++ b/dspace/config/dspace.cfg
@@ -432,6 +432,10 @@ useProxies = true
 # (Requires reboot of servlet container, e.g. Tomcat, to reload)
 #proxies.trusted.include_ui_ip = true
 
+# Public URLs of proxies used with DSpace. These urls are replaced with the value of dspace.server.url in
+# requests containing a uri parameter if the uri matches a value contained in proxies.trusted.urls.
+#proxies.trusted.urls =
+
 # Client IP Address Anonymization
 # Define how many parts of the client IP address to set to 0 in order to anonymize clients.
 # For example, setting it to 2 will mean that client IPs will look like 192.168.0.0.
