--- a/dspace-saml2/pom.xml
+++ b/dspace-saml2/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>org.dspace</groupId>
         <artifactId>dspace-parent</artifactId>
-        <version>8.0-SNAPSHOT</version>
+        <version>8.0</version>
         <relativePath>..</relativePath>
     </parent>
 
@@ -216,6 +216,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
             <version>${spring-boot.version}</version>
+            <exclusions>
+                <!-- Later version brought in by dspace-services above -->
+                <exclusion>
+                    <groupId>io.micrometer</groupId>
+                    <artifactId>micrometer-observation</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
