--- a/pom.xml
+++ b/pom.xml
@@ -1089,7 +1089,7 @@
             <dependency>
                 <groupId>org.dspace</groupId>
                 <artifactId>dspace-saml2</artifactId>
-                <version>8.1-SNAPSHOT</version>
+                <version>8.1</version>
             </dependency>
             <dependency>
                 <groupId>org.dspace</groupId>
